--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -4,7 +4,7 @@
 		<div class="col-sm-12" style="text-align: center; padding-top: 25px;">
 			<%= @name %>
 
-			<p><%= @resume %> | <%= @linked_in %> | <%= @github %> | <%= @stackoverflow %></p>
+			<p><%= @resume %> | <%= @linked_in %> | <%= @github %> | <%= @stackoverflow %> | <%= @gem_profile %></p>
 
 			<%= @email %>
 		</div>
