--- a/app/views/partials/_column_one.html.erb
+++ b/app/views/partials/_column_one.html.erb
@@ -1,12 +1,41 @@
-
+<% fromPresent = false %>
 <% left.each do |tech, proj| %>
 	<% @projects = Project.where(id: proj) %>
+	<% @years = Array.new %>
+	<% @projects.each do |p| %>
+		<% if p.still_active == true %>
+			<% fromPresent = true %>
+		<% else %>
+			<% fromPresent = false %>
+		<% end %>
+		<% @years << p.year %>
+	<% end %>
+	<% smallest, largest = @years.select{ |x| x }.minmax_by(&:to_i) %>
+	<% cur_year = DateTime.now.year.to_i %>
 	<p style="text-align: center; font-family: cursive; padding-bottom: 0px; margin-bottom: 0px;">
-			&#8226; <b><u style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></u></b> &#8226; 
+			<% if fromPresent == true %>
+				&#8226; 
+				<b><u><span style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></span>
+				<% if (cur_year - smallest) == 1 %>
+				  (<span style="font-size: 14px;">1 years</span>)
+				<% else %>
+					(<span style="font-size: 14px;"><%= cur_year - smallest %> years</span>)
+				<% end %>
+				</u></b>&#8226; 
+			<% else %>
+				&#8226; 
+				<b><u><span style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></span>
+				<% if (largest - smallest) == 0 %>
+					(<span style="font-size: 14px;">1 years</span>)
+				<% else %>
+					(<span style="font-size: 14px;"><%= largest - smallest %> years</span>)
+				<% end %>
+				</u></b>&#8226; 
+			<% end %>
 	</p>
 	<p style="text-align: center; font-family: cursive;">
 	<% @projects.each do |p| %>
-		 <%= p.name %> <br>
+		<%= p.name %> <br>
 	<% end %>
 	</p>
 <% end %>
