(bug): added missing column to rake task

--- a/app/views/partials/_column_one.html.erb
+++ b/app/views/partials/_column_one.html.erb
@@ -10,25 +10,25 @@
 		<% end %>
 		<% @years << p.year %>
 	<% end %>
-	<% smallest, largest = @years.select{ |x| x }.minmax_by(&:to_i) %>
-	<% cur_year = DateTime.now.year.to_i %>
+	<% @smallest, @largest = @years.select{ |x| x }.minmax_by(&:to_i) %>
+	<% @cur_year = DateTime.now.year.to_i %>
 	<p style="text-align: center; font-family: cursive; padding-bottom: 0px; margin-bottom: 0px;">
 			<% if fromPresent == true %>
 				&#8226; 
 				<b><u><span style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></span>
-				<% if (cur_year - smallest) == 1 %>
+				<% if (@cur_year - @smallest) == 1 %>
 				  (<span style="font-size: 14px;">1 years</span>)
 				<% else %>
-					(<span style="font-size: 14px;"><%= cur_year - smallest %> years</span>)
+					(<span style="font-size: 14px;"><%= @cur_year - @smallest %> years</span>)
 				<% end %>
 				</u></b>&#8226; 
 			<% else %>
 				&#8226; 
 				<b><u><span style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></span>
-				<% if (largest - smallest) == 0 %>
+				<% if (@largest - @smallest) == 0 %>
 					(<span style="font-size: 14px;">1 years</span>)
 				<% else %>
-					(<span style="font-size: 14px;"><%= largest - smallest %> years</span>)
+					(<span style="font-size: 14px;"><%= @largest - @smallest %> years</span>)
 				<% end %>
 				</u></b>&#8226; 
 			<% end %>
