--- a/app/views/partials/_column_three.html.erb
+++ b/app/views/partials/_column_three.html.erb
@@ -13,25 +13,28 @@
   <% smallest, largest = @years.select{ |x| x }.minmax_by(&:to_i) %>
   <% cur_year = DateTime.now.year.to_i %>
   <p style="text-align: center; font-family: cursive; padding-bottom: 0px; margin-bottom: 0px;">
-      <% if fromPresent == true %>
+				&#8226; 
+				<b><u><span style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></span></u><b>
+				&#8226; 
+      <!--% if fromPresent == true %>
         &#8226; 
-        <b><u><span style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></span>
-        <% if (cur_year - smallest) == 1 %>
+        <b><u><span style="font-size: 18px;">%= tech.gsub("_"," ").titleize %></span>
+        % if (cur_year - smallest) == 1 %>
           (<span style="font-size: 14px;">1 years</span>)
-        <% else %>
-          (<span style="font-size: 14px;"><%= cur_year - smallest %> years</span>)
-        <% end %>
+        % else %>
+          (<span style="font-size: 14px;">%= cur_year - smallest %> years</span>)
+        % end %>
         </u></b>&#8226; 
-      <% else %>
+      % else %>
         &#8226; 
-        <b><u><span style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></span>
-        <% if (largest - smallest) == 0 %>
+        <b><u><span style="font-size: 18px;">%= tech.gsub("_"," ").titleize %></span>
+        % if (largest - smallest) == 0 %>
           (<span style="font-size: 14px;">1 years</span>)
-        <% else %>
-          (<span style="font-size: 14px;"><%= largest - smallest %> years</span>)
-        <% end %>
+        % else %>
+          (<span style="font-size: 14px;">%= largest - smallest %> years</span>)
+        % end %>
         </u></b>&#8226; 
-      <% end %>
+      % end %-->
   </p>
   <p style="text-align: center; font-family: cursive;">
   <% @projects.each do |p| %>
