(bug): added fix for bug

--- a/app/views/partials/_column_three.html.erb
+++ b/app/views/partials/_column_three.html.erb
@@ -14,7 +14,7 @@
   <% cur_year = DateTime.now.year.to_i %>
   <p style="text-align: center; font-family: cursive; padding-bottom: 0px; margin-bottom: 0px;">
 				&#8226; 
-				<b><u><span style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></span></u><b>
+				<b><u><span style="font-size: 18px;"><%= tech.gsub("_"," ").titleize %></span></u></b>
 				&#8226; 
       <!--% if fromPresent == true %>
         &#8226; 
