(bug): commented out crashing code

--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -13,7 +13,11 @@
 
 	<p style="font-family: cursive; font-size: 18px;">
 		<b>Technologies used:</b><br>
-		<% @t = Tech.where(:project_id => ap[0]).first %>
+		<% if ap[0].nil? %>
+			<% byebug %>
+		<% else %>
+			<% @t = Tech.where(:project_id => ap[0]).first %>
+		<% end %>
 		<!--% @full_t = @t.attribute_names %>
 		% stopCol = ["id","created_at","updated_at", "project_id"] %>
 		% @full_t = @full_t.reject{ |e| stopCol.include? e } %>
