--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -13,15 +13,9 @@
 
 	<p style="font-family: cursive; font-size: 18px;">
 		<b>Technologies used:</b><br>
-		<% if ap[0].nil? %>
-			<% byebug %>
-		<% else %>
-			<%= ap[0] %>
-			<% @t = Tech.where(:project_id => ap[0]).first %>
-		<% end %>
-		<!--% @full_t = @t.attribute_names %>
-		% stopCol = ["id","created_at","updated_at", "project_id"] %>
-		% @full_t = @full_t.reject{ |e| stopCol.include? e } %>
+		<% @full_t = @t.attribute_names %>
+		<% stopCol = ["id","created_at","updated_at", "project_id"] %>
+		<!--% @full_t = @full_t.reject{ |e| stopCol.include? e } %>
 		% remove = [] %>
 		% @full_t.each do |name| %>
 			% if Tech.where("project_id = ?", ap[0]).pluck("#{name}").first == false %>	
