(bug): fixed broken ruby code

--- a/app/views/partials/_column_one.html.erb
+++ b/app/views/partials/_column_one.html.erb
@@ -19,7 +19,7 @@
 				<% if (@cur_year - @smallest) == 1 %>
 				  (<span style="font-size: 14px;">1 years</span>)
 				<% else %>
-					(<span style="font-size: 14px;">%= @cur_year - @smallest %> years</span>)
+					(<span style="font-size: 14px;"><%= @cur_year - @smallest %> years</span>)
 				<% end %>
 				</u></b>&#8226; 
 			<% else %>
