--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -5,7 +5,7 @@
 		<b><h4 style="font-family: cursive;">&#8226; <%= ap[1] %> (<%= ap[3] %> app) &#8226;</h4></b>
 	</p>
 
-	<p style="text-align: center; font-family: cursive; padding-top: 0px; margin-top: 0px;">
+	<p style="text-align: center; padding-top: 0px; margin-top: 0px;">
 		<%= ap[2] %> 
 			The existing code is here: <a href=<%= ap[4] %>><%= ap[1] + " " + ap[3] %> (repo)</a>.&nbsp;
 			The web app is hosted <a href=<%= ap[5] %>>here</a>.
