--- a/app/assets/stylesheets/top_header.scss
+++ b/app/assets/stylesheets/top_header.scss
@@ -18,12 +18,12 @@
 
 .badge-title {
 	font-family: cursive;
-	font-size: 16px;
+	font-size: 18px;
+	font-weight: bold;
 }
 
 .badge-lib-ref {
-	font-family: cursive;
-	font-size: 16px;
+	font-size: 13px;
 }
 
 
