--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -23,14 +23,14 @@
 			<div class="row">
 				<!--h5 style="font-family: cursive;">Published Ruby Libraries</h5-->
 				<p style="font-size: 14px;">
-					<span class="badge-title">Verse Count</span><br><span class="badge-lib-ref">[a published Ruby library]</span>:<br><a href="https://badge.fury.io/rb/verse_count"><img src="https://badge.fury.io/rb/verse_count.svg" alt="Verse Count" height="18"></a><br>
-					<span style="font-size: 12px;">
+					<span class="badge-title">Verse Count</span><br><span class="badge-lib-ref">[a published Ruby library]</span><br><a href="https://badge.fury.io/rb/verse_count"><img src="https://badge.fury.io/rb/verse_count.svg" alt="Verse Count" height="18"></a><br>
+					<span class="lib-info">
 						Returns total verse count for each chapter of the Bible. May obtain verse count by book or by book and chapter.
 					</span>
 				</p>
 				<p style="font-size: 14px;">
-					<span class="badge-title">Proverbs NIV</span><br><span class="badge-lib-ref">[a published Ruby library]</span>:<br><a href="https://badge.fury.io/rb/proverbs_niv"><img src="https://badge.fury.io/rb/proverbs_niv.svg" alt="Proverbs NIV" height="18"></a><br>
-					<span style="font-size: 12px;">
+					<span class="badge-title">Proverbs NIV</span><br><span class="badge-lib-ref">[a published Ruby library]</span><br><a href="https://badge.fury.io/rb/proverbs_niv"><img src="https://badge.fury.io/rb/proverbs_niv.svg" alt="Proverbs NIV" height="18"></a><br>
+					<span class="lib-info">
 					A wrapper for Word Recurrence API endpoint. Contains functionality for obtaining the entire books of proverbs and individual chapters. 
 					</span>
 				</p>
@@ -50,8 +50,6 @@
 	<div class="row" style="margin: 0 auto; padding-top: 5px;">
 		<div class="col-sm-3 about-div">
 			<%= render partial: 'partials/column_one', locals: { left: @kv_first_half } %>
-		<!--/div>
-		<div class="col-sm-3 about-div"-->
 			<%= render partial: 'partials/column_three', locals: { right: @kv_second_half } %>
 		</div>
 		<div class="col-sm-9 about-div">
