--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -14,24 +14,36 @@
 		<div class="col-sm-3">
 			<img width="200px" height="auto;" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img>
 		</div>
-		<div class="col-sm-6">
+		<div class="col-sm-5">
 			<%= @seeking %>
 			<br><br>
 			<%= @portfolio + @challenge %>
 		</div>
-		<div class="col-sm-3" id="badge-info">
+		<div class="col-sm-4" id="badge-info">
 			<div class="row">
 				<!--h5 style="font-family: cursive;">Published Ruby Libraries</h5-->
 				<p style="font-size: 14px;">
-					<span class="badge-title">Verse Count</span><br><span class="badge-lib-ref">[a published Ruby library]</span><br><a href="https://badge.fury.io/rb/verse_count"><img src="https://badge.fury.io/rb/verse_count.svg" alt="Verse Count" height="18"></a><br>
+					<span class="badge-title">Proverbs NIV</span><br>
+					<span class="badge-lib-ref">[a published Ruby library]</span><br>
+					<a href="https://badge.fury.io/rb/proverbs_niv"><img src="https://badge.fury.io/rb/proverbs_niv.svg" alt="Proverbs NIV" height="16"></a><br>
+					<span class="lib-info">
+					A wrapper for the endpoints of the Word Recurrence API. Contains functionality for obtaining the entire books of proverbs and individual chapters. 
+					</span>
+				</p>
+				<p style="font-size: 14px;">
+					<span class="badge-title">Verse Count</span><br>
+					<span class="badge-lib-ref">[a published Ruby library]</span><br>
+					<a href="https://badge.fury.io/rb/verse_count"><img src="https://badge.fury.io/rb/verse_count.svg" alt="Verse Count" height="16"></a><br>
 					<span class="lib-info">
 						Returns total verse count for each chapter of the Bible. May obtain verse count by book or by book and chapter.
 					</span>
 				</p>
 				<p style="font-size: 14px;">
-					<span class="badge-title">Proverbs NIV</span><br><span class="badge-lib-ref">[a published Ruby library]</span><br><a href="https://badge.fury.io/rb/proverbs_niv"><img src="https://badge.fury.io/rb/proverbs_niv.svg" alt="Proverbs NIV" height="18"></a><br>
+					<span class="badge-title">Bible Numerology</span><br>
+					<span class="badge-lib-ref">[a published Ruby library]</span><br>
+					<a href="https://badge.fury.io/rb/bible_numerology"><img src="https://badge.fury.io/rb/bible_numerology.svg" alt="Bible Numerology" height="16"></a><br>
 					<span class="lib-info">
-					A wrapper for Word Recurrence API endpoint. Contains functionality for obtaining the entire books of proverbs and individual chapters. 
+					This gem is an unofficial wrapper for Mark H. Lane's Bible based numerical interpretations.
 					</span>
 				</p>
 			</div>
@@ -39,10 +51,10 @@
 	</div>
 
 	<div class="row" style="margin: 0 auto; padding-top: 5px;">
-		<div class="col-sm-3">
+		<div class="col-sm-3" style="padding-top: 100px;">
 			<center><h1 style="font-family: cursive;">Technologies</h1></center>
 		</div>
-		<div class="col-sm-9">
+		<div class="col-sm-9" style="padding-top: 100px;">
 			<center><h1 style="font-family: cursive;">Active Projects</h1></center>
 		</div>
 	</div>
