(styling): added padding to image and subHeader blurb

--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -11,10 +11,10 @@
 	</div>
 
 	<div class="row" id="sub-intro">
-		<div class="col-sm-3">
+		<div class="col-sm-3" style="padding-top: 23px; margin-top: 23px;">
 			<img width="200px" height="auto;" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img>
 		</div>
-		<div class="col-sm-5">
+		<div class="col-sm-5" style="padding-top: 20px; margin-top: 20px;">
 			<%= @seeking %>
 			<br><br>
 			<%= @portfolio + @challenge %>
