(bug): adding badge link

--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -41,7 +41,7 @@
 				<p style="font-size: 14px;">
 					<span class="badge-title">Bible Numerology</span><br>
 					<span class="badge-lib-ref">[a published Ruby library]</span><br>
-					<a href="https://badge.fury.io/rb/bible_numerology"><img src="https://badge.fury.io/rb/bible_numerology.svg" alt="Bible Numerology" height="16"></a><br>
+					<a href="https://badge.fury.io/rb/bible_numerology"><img src="https://badge.fury.io/rb/bible_numerology.svg" alt="Bible Numerology" height="16"></a>
 					<span class="lib-info">
 					This gem is an unofficial wrapper for Mark H. Lane's Bible based numerical interpretations.
 					</span>
