(issue): added github repo links to gem refs

--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -21,17 +21,16 @@
 		</div>
 		<div class="col-sm-4" id="badge-info">
 			<div class="row">
-				<!--h5 style="font-family: cursive;">Published Ruby Libraries</h5-->
 				<p style="font-size: 14px;">
-					<span class="badge-title">Proverbs NIV</span><br>
+					<span class="badge-title"><a href="https://github.com/kkuivenhoven/ProverbsNIV_Gem">Proverbs NIV</a></span><br>
 					<span class="badge-lib-ref">[a published Ruby library]</span><br>
 					<a href="https://badge.fury.io/rb/proverbs_niv"><img src="https://badge.fury.io/rb/proverbs_niv.svg" alt="Proverbs NIV" height="16"></a><br>
 					<span class="lib-info">
-					A wrapper for the endpoints of the Word Recurrence API. Contains functionality for obtaining the entire books of proverbs and individual chapters. 
+						A wrapper for the endpoints of the Word Recurrence API. Contains functionality for obtaining the entire books of proverbs and individual chapters. 
 					</span>
 				</p>
 				<p style="font-size: 14px;">
-					<span class="badge-title">Verse Count</span><br>
+					<span class="badge-title"><a href="https://github.com/kkuivenhoven/VerseCount">Verse Count</span><br>
 					<span class="badge-lib-ref">[a published Ruby library]</span><br>
 					<a href="https://badge.fury.io/rb/verse_count"><img src="https://badge.fury.io/rb/verse_count.svg" alt="Verse Count" height="16"></a><br>
 					<span class="lib-info">
@@ -39,11 +38,11 @@
 					</span>
 				</p>
 				<p style="font-size: 14px;">
-					<span class="badge-title">Bible Numerology</span><br>
+					<span class="badge-title"><a href="https://github.com/kkuivenhoven/BibleNumerology">Bible Numerology</a></span><br>
 					<span class="badge-lib-ref">[a published Ruby library]</span><br>
-					<a href="https://badge.fury.io/rb/bible_numerology"><img src="https://badge.fury.io/rb/bible_numerology.svg" alt="Bible Numerology" height="16"></a>
+					<a href="https://badge.fury.io/rb/bible_numerology"><img src="https://badge.fury.io/rb/bible_numerology.svg" alt="Bible Numerology" height="16"></a><br>
 					<span class="lib-info">
-					This gem is an unofficial wrapper for Mark H. Lane's Bible based numerical interpretations.
+						This gem is an unofficial wrapper for Mark H. Lane's Bible based numerical interpretations.
 					</span>
 				</p>
 			</div>
