(issue): added missing end a tag

--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -30,7 +30,7 @@
 					</span>
 				</p>
 				<p style="font-size: 14px;">
-					<span class="badge-title"><a href="https://github.com/kkuivenhoven/VerseCount">Verse Count</span><br>
+					<span class="badge-title"><a href="https://github.com/kkuivenhoven/VerseCount">Verse Count</a></span><br>
 					<span class="badge-lib-ref">[a published Ruby library]</span><br>
 					<a href="https://badge.fury.io/rb/verse_count"><img src="https://badge.fury.io/rb/verse_count.svg" alt="Verse Count" height="16"></a><br>
 					<span class="lib-info">
