--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -14,37 +14,41 @@
 		<div class="col-sm-3" style="padding-top: 23px; margin-top: 23px;">
 			<img width="200px" height="auto;" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img>
 		</div>
-		<div class="col-sm-5" style="padding-top: 20px; margin-top: 20px;">
+		<div class="col-sm-5" class="center-section" style="padding-top: 20px; margin-top: 20px;">
 			<%= @seeking %>
 			<br><br>
 			<%= @portfolio + @challenge %>
 		</div>
 		<div class="col-sm-4" id="badge-info">
 			<div class="row">
+
 				<p style="font-size: 14px;">
-					<span class="badge-title"><a href="https://github.com/kkuivenhoven/ProverbsNIV_Gem">Proverbs NIV</a></span><br>
-					<span class="badge-lib-ref">[a published Ruby library]</span><br>
-					<a href="https://badge.fury.io/rb/proverbs_niv"><img src="https://badge.fury.io/rb/proverbs_niv.svg" alt="Proverbs NIV" height="16"></a><br>
-					<span class="lib-info">
-						A wrapper for the endpoints of the Word Recurrence API. Contains functionality for obtaining the entire books of proverbs and individual chapters. 
-					</span>
-				</p>
-				<p style="font-size: 14px;">
-					<span class="badge-title"><a href="https://github.com/kkuivenhoven/VerseCount">Verse Count</a></span><br>
-					<span class="badge-lib-ref">[a published Ruby library]</span><br>
-					<a href="https://badge.fury.io/rb/verse_count"><img src="https://badge.fury.io/rb/verse_count.svg" alt="Verse Count" height="16"></a><br>
-					<span class="lib-info">
-						Returns total verse count for each chapter of the Bible. May obtain verse count by book or by book and chapter.
-					</span>
-				</p>
-				<p style="font-size: 14px;">
-					<span class="badge-title"><a href="https://github.com/kkuivenhoven/BibleNumerology-Gem">Bible Numerology</a></span><br>
+					<span class="badge-title"><a class="badge-link" href="https://github.com/kkuivenhoven/BibleNumerology-Gem">Numerology</a></span><br>
 					<span class="badge-lib-ref">[a published Ruby library]</span><br>
 					<a href="https://badge.fury.io/rb/bible_numerology"><img src="https://badge.fury.io/rb/bible_numerology.svg" alt="Bible Numerology" height="16"></a><br>
 					<span class="lib-info">
 						This gem is an unofficial wrapper for Mark H. Lane's Bible based numerical interpretations.
 					</span>
 				</p>
+
+				<p style="font-size: 14px;">
+					<span class="badge-title"><a class="badge-link" href="https://github.com/kkuivenhoven/VerseCount">Verse Count</a></span><br>
+					<span class="badge-lib-ref">[a published Ruby library]</span><br>
+					<a href="https://badge.fury.io/rb/verse_count"><img src="https://badge.fury.io/rb/verse_count.svg" alt="Verse Count" height="16"></a><br>
+					<span class="lib-info">
+						Returns total verse count for each chapter of the Bible. May obtain verse count by book or by book and chapter.
+					</span>
+				</p>
+
+				<p style="font-size: 14px;">
+					<span class="badge-title"><a class="badge-link"href="https://github.com/kkuivenhoven/ProverbsNIV_Gem">Proverbs NIV</a></span><br>
+					<span class="badge-lib-ref">[a published Ruby library]</span><br>
+					<a href="https://badge.fury.io/rb/proverbs_niv"><img src="https://badge.fury.io/rb/proverbs_niv.svg" alt="Proverbs NIV" height="16"></a><br>
+					<span class="lib-info">
+						A wrapper for the endpoints of the Word Recurrence API. Contains functionality for obtaining the entire books of proverbs and individual chapters. 
+					</span>
+				</p>
+
 			</div>
 		</div>
 	</div>
