--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -14,13 +14,13 @@
 		<div class="col-sm-3" style="padding-top: 23px; margin-top: 23px;">
 			<img width="200px" height="auto;" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img>
 		</div>
-		<!--div class="col-sm-5" class="center-section" style="padding-top: 20px; margin-top: 20px;"-->
-		<div class="col-sm-9" class="center-section" style="padding-top: 20px; margin-top: 20px;">
+		<div class="col-sm-5" class="center-section" style="padding-top: 20px; margin-top: 20px;">
+		<!--div class="col-sm-9" class="center-section" style="padding-top: 20px; margin-top: 20px;"-->
 			<%= @seeking %>
 			<br><br>
 			<%= @portfolio + @challenge %>
 		</div>
-		<!--div class="col-sm-4" id="badge-info">
+		<div class="col-sm-4" id="badge-info">
 			<div class="row">
 
 				<p style="font-size: 14px;">
@@ -51,7 +51,7 @@
 				</p>
 
 			</div>
-		</div-->
+		</div>
 	</div>
 
 	<div class="row" style="margin: 0 auto; padding-top: 5px;">
