--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -12,7 +12,7 @@
 
 	<div class="row" id="sub-intro">
 		<div class="col-sm-3" style="padding-top: 23px; margin-top: 23px;">
-			<img width="200px" height="auto;" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img>
+			<img width="200px" height="auto;" src="https://raw.githubusercontent.com/kkuivenhoven/AboutKendra/master/fullsizeoutput_1e8b.jpeg" alt="https://raw.githubusercontent.com/kkuivenhoven/AboutKendra/master/fullsizeoutput_1e8b.jpeg" class="img-thumbnail" style=""></img>
 		</div>
 		<div class="col-sm-5" class="center-section" style="padding-top: 20px; margin-top: 20px;">
 		<!--div class="col-sm-9" class="center-section" style="padding-top: 20px; margin-top: 20px;"-->
