--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
 								</div>
 							</div>
 							<div class="panel panel-primary">
-								<h4>Active projects:</h4>
+								<h4>Projects:</h4>
 								<div class="panel-body">
 
                   <b style="font-size: 18px;">Word Recurrence (web app)</b><br>
