--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -1,5 +1,6 @@
 
-<% @all_projects.each do |ap| %>
+<!--% @all_projects.each do |ap| %-->
+<% projects.each do |ap| %>
 
 	<p style="text-align: center; font-family: cursive; padding-bottom: 0px; margin-bottom: 0px;">
 		<b><h4 style="font-family: cursive;">&#8226; <%= ap[1] %> (<%= ap[3] %> app) &#8226;</h4></b>
