moved container styling to css

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -2,6 +2,12 @@
 	* This stylesheet refers to the about view page.
 	*/
 
+
+.container {
+	max-width: 1270px;
+}
+
+
 .about-div {
 	text-align: center;
 }
