--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -1,8 +1,8 @@
-<style>
+<!--style>
 	.container {
 		max-width: 1270px;
 	}
-</style>
+</style-->
 
 <div class="container" style="margin: 0 auto;">
 	<div class="row" style="margin: 0 auto;">
