added blurb about tutoring

--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -1,8 +1,3 @@
-<!--style>
-	.container {
-		max-width: 1270px;
-	}
-</style-->
 
 <div class="container" style="margin: 0 auto;">
 	<div class="row" style="margin: 0 auto;">
@@ -84,9 +79,9 @@
 					<%= render partial: 'partials/column_two', locals: { projects: @firstProjects } %>
 				</div>
 				<div class="col-sm-4">
-					<center>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a nisi felis. Aenean congue tincidunt quam quis malesuada. Fusce tincidunt risus massa, ultricies cursus mi dignissim id. Nam ut ullamcorper sapien. Sed non neque gravida, porta justo eu, dictum purus. Aliquam in metus felis. 
-					</center>
+					I offer private and/or group tutoring in Mathematics and Statistics - up to Calculus 2.
+					I am available for remote tutoring as well as in-person.
+					Upon request, I can offer a list of references.
 				</div>
 			</div>
 				<%= render partial: 'partials/column_two', locals: { projects: @lastProjects } %>
