--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -12,6 +12,36 @@
 			<% if ap[5].length > 0 %>
 				The web app is hosted <a href=<%= ap[5] %>>here</a>.
 			<% end %>
+		<% if ap[3] == "desktop" %>
+			<div class="carouselContainer"> 
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<%= image_tag("delete01.png", :class => "carouselImage") %>
+							<%= image_tag("delete02.png", :class => "carouselImage") %>
+							<%= image_tag("delete03.png", :class => "carouselImage") %>
+						</div>
+						<div class="carousel-item">
+							<%= image_tag("delete04.png", :class => "carouselImage") %>
+							<%= image_tag("delete05.png", :class => "carouselImage") %>
+						</div>
+						<div class="carousel-item">
+							<%= image_tag("delete06.png", :class => "carouselImage") %>
+							<%= image_tag("delete07.png", :class => "carouselImage") %>
+							<%= image_tag("delete08.png", :class => "carouselImage") %>
+						</div>
+					</div-->
+					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+		<% end %>
 	</p>
 
 	<p style="font-family: cursive; font-size: 18px;">
