--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -24,6 +24,8 @@
 						<div class="carousel-item">
 							<%= image_tag("delete04.png", :class => "carouselImage") %>
 							<%= image_tag("delete05.png", :class => "carouselImage") %>
+							<%= image_tag("delete07.png", :class => "carouselImage") %>
+							<%= image_tag("delete08.png", :class => "carouselImage") %>
 						</div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
