add extra file path to images for preview

--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -17,17 +17,17 @@
 				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<%= image_tag("delete01.png", :class => "carouselImage") %>
-							<%= image_tag("delete02.png", :class => "carouselImage") %>
-							<%= image_tag("delete03.png", :class => "carouselImage") %>
+							<%= image_tag("textEditorProject/delete01.png", :class => "carouselImage") %>
+							<%= image_tag("textEditorProject/delete02.png", :class => "carouselImage") %>
+							<%= image_tag("textEditorProject/delete03.png", :class => "carouselImage") %>
 						</div>
 						<div class="carousel-item">
-							<%= image_tag("delete04.png", :class => "carouselImage") %>
-							<%= image_tag("delete05.png", :class => "carouselImage") %>
+							<%= image_tag("textEditorProject/delete04.png", :class => "carouselImage") %>
+							<%= image_tag("textEditorProject/delete05.png", :class => "carouselImage") %>
 						</div>
 						<div class="carousel-item">
-							<%= image_tag("delete09.png", :class => "carouselImage") %>
-							<%= image_tag("delete10.png", :class => "carouselImage") %>
+							<%= image_tag("textEditorProject/delete09.png", :class => "carouselImage") %>
+							<%= image_tag("textEditorProject/delete10.png", :class => "carouselImage") %>
 						</div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
